<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wall_ransac</name>
  <version>1.0.0</version>
  <description>RPLidar A2M8を使用した壁検知パッケージ（RViz2対応）</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- 基本依存関係 -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>numpy</depend>
  
  <!-- RViz2視覚化用依存関係 -->
  <depend>visualization_msgs</depend>

  <!-- ビルドツール -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- テスト依存関係 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
